--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,13 +15,19 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@mix-portal/ng/cms-category": ["libs/ng/cms-category/src/index.ts"],
       "@mix-portal/ng/cms-dashboard": ["libs/ng/cms-dashboard/src/index.ts"],
+      "@mix-portal/ng/cms-database": ["libs/ng/cms-database/src/index.ts"],
+      "@mix-portal/ng/cms-file": ["libs/ng/cms-file/src/index.ts"],
       "@mix-portal/ng/cms-init": ["libs/ng/cms-init/src/index.ts"],
       "@mix-portal/ng/cms-module": ["libs/ng/cms-module/src/index.ts"],
       "@mix-portal/ng/cms-navigation": ["libs/ng/cms-navigation/src/index.ts"],
       "@mix-portal/ng/cms-page": ["libs/ng/cms-page/src/index.ts"],
       "@mix-portal/ng/cms-portal": ["libs/ng/cms-portal/src/index.ts"],
       "@mix-portal/ng/cms-post": ["libs/ng/cms-post/src/index.ts"],
+      "@mix-portal/ng/cms-tag": ["libs/ng/cms-tag/src/index.ts"],
+      "@mix-portal/ng/cms-theme": ["libs/ng/cms-theme/src/index.ts"],
+      "@mix-portal/ng/cms-user": ["libs/ng/cms-user/src/index.ts"],
       "@mix-portal/ng/shared": ["libs/ng/shared/src/index.ts"],
       "@mix-portal/ng/webshell": ["libs/ng/webshell/src/index.ts"]
     }
