--- a/package.json
+++ b/package.json
@@ -34,61 +34,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.13",
-    "@angular/common": "11.2.13",
-    "@angular/compiler": "11.2.13",
-    "@angular/core": "11.2.13",
-    "@angular/forms": "11.2.13",
-    "@angular/platform-browser": "11.2.13",
-    "@angular/platform-browser-dynamic": "11.2.13",
-    "@angular/router": "11.2.13",
+    "@angular/animations": "12.1.0",
+    "@angular/common": "12.1.0",
+    "@angular/compiler": "12.1.0",
+    "@angular/core": "12.1.0",
+    "@angular/forms": "12.1.0",
+    "@angular/platform-browser": "12.1.0",
+    "@angular/platform-browser-dynamic": "12.1.0",
+    "@angular/router": "12.1.0",
     "@coreng/angular-core": "^0.0.1",
     "@ngneat/transloco": "^2.22.0",
-    "@ngrx/component-store": "^12.2.0",
-    "@nrwl/angular": "12.4.0",
-    "@swimlane/ngx-charts": "^18.0.1",
+    "@ngrx/component-store": "12.2.0",
+    "@swimlane/ngx-charts": "17.0.1",
     "lodash-es": "4.17.4",
-    "ng-zorro-antd": "^11.4.2",
+    "ng-zorro-antd": "12.0.0",
     "rxjs": "6.6.0",
     "tslib": "2.0.0",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.13",
-    "@angular-eslint/eslint-plugin": "4.3.0",
-    "@angular-eslint/eslint-plugin-template": "4.3.0",
-    "@angular-eslint/template-parser": "4.3.0",
-    "@angular/cli": "11.2.13",
-    "@angular/compiler-cli": "11.2.13",
-    "@angular/language-service": "11.2.13",
+    "@angular-devkit/build-angular": "12.1.4",
+    "@angular-eslint/eslint-plugin": "12.3.1",
+    "@angular-eslint/eslint-plugin-template": "12.3.1",
+    "@angular-eslint/template-parser": "12.3.1",
+    "@angular/cli": "12.1.4",
+    "@angular/compiler-cli": "12.1.0",
+    "@angular/language-service": "12.1.0",
     "@eztool/prettier-plugin-formatter": "1.0.1",
-    "@nrwl/cli": "12.4.0",
-    "@nrwl/cypress": "12.4.0",
-    "@nrwl/eslint-plugin-nx": "12.4.0",
-    "@nrwl/jest": "12.4.0",
-    "@nrwl/linter": "12.4.0",
-    "@nrwl/nx-cloud": "^12.2.7",
-    "@nrwl/tao": "12.4.0",
-    "@nrwl/workspace": "12.4.0",
+    "@nrwl/angular": "12.7.2",
+    "@nrwl/cli": "12.7.2",
+    "@nrwl/cypress": "12.7.2",
+    "@nrwl/eslint-plugin-nx": "12.7.2",
+    "@nrwl/jest": "12.7.2",
+    "@nrwl/linter": "12.7.2",
+    "@nrwl/nx-cloud": "12.3.10",
+    "@nrwl/tao": "12.7.2",
+    "@nrwl/workspace": "12.7.2",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "4.24.0",
-    "@typescript-eslint/parser": "4.24.0",
+    "@typescript-eslint/eslint-plugin": "4.28.5",
+    "@typescript-eslint/parser": "4.28.5",
     "commitizen": "4.2.4",
     "cypress": "^7.3.0",
     "cz-customizable": "6.3.0",
-    "dotenv": "8.2.0",
+    "dotenv": "10.0.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "2.11.3",
     "husky": "6.0.0",
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.3",
-    "prettier": "2.2.1",
+    "prettier": "2.3.1",
     "pretty-quick": "3.1.0",
-    "ts-jest": "26.5.6",
+    "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
-    "typescript": "4.1.5"
+    "typescript": "4.3.5"
   },
   "config": {
     "commitizen": {
