--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@ngneat/transloco": "^2.22.0",
     "@ngrx/component-store": "12.2.0",
     "@swimlane/ngx-charts": "17.0.1",
+    "crypto-js": "^4.1.1",
     "lodash-es": "4.17.4",
     "ng-zorro-antd": "12.0.0",
     "rxjs": "6.6.0",
