--- a/package.json
+++ b/package.json
@@ -11,71 +11,72 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.0",
-    "@angular/common": "~13.3.0",
-    "@angular/compiler": "~13.3.0",
-    "@angular/core": "~13.3.0",
-    "@angular/forms": "~13.3.0",
-    "@angular/platform-browser": "~13.3.0",
-    "@angular/platform-browser-dynamic": "~13.3.0",
-    "@angular/router": "~13.3.0",
-    "@nrwl/angular": "14.1.4",
-    "@taiga-ui/cdk": "^2.44.0",
-    "@taiga-ui/core": "^2.44.0",
-    "@taiga-ui/icons": "^2.44.0",
-    "@taiga-ui/kit": "^2.44.0",
+    "@angular/animations": "v14.0.0-rc.1 ",
+    "@angular/common": "v14.0.0-rc.1 ",
+    "@angular/compiler": "v14.0.0-rc.1 ",
+    "@angular/core": "v14.0.0-rc.1 ",
+    "@angular/forms": "v14.0.0-rc.1 ",
+    "@angular/platform-browser": "v14.0.0-rc.1 ",
+    "@angular/platform-browser-dynamic": "v14.0.0-rc.1 ",
+    "@angular/router": "v14.0.0-rc.1 ",
+    "@microsoft/signalr": "^6.0.5",
+    "@nrwl/angular": "14.1.7",
+    "@taiga-ui/cdk": "^2.45.0",
+    "@taiga-ui/core": "^2.45.0",
+    "@taiga-ui/icons": "^2.45.0",
+    "@taiga-ui/kit": "^2.45.0",
     "colors": "^1.4.0",
     "crypto-js": "^4.1.1",
-    "dompurify": "2.2.9",
-    "glob": "^8.0.1",
-    "rxjs": "~7.4.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "dompurify": "2.3.8",
+    "glob": "^8.0.3",
+    "rxjs": "~7.5.5",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.0",
-    "@angular-eslint/eslint-plugin": "~13.1.0",
-    "@angular-eslint/eslint-plugin-template": "~13.1.0",
-    "@angular-eslint/template-parser": "~13.1.0",
-    "@angular/cli": "~13.3.0",
-    "@angular/compiler-cli": "~13.3.0",
-    "@angular/language-service": "~13.3.0",
-    "@nrwl/cli": "14.1.4",
-    "@nrwl/cypress": "14.1.4",
-    "@nrwl/eslint-plugin-nx": "14.1.4",
-    "@nrwl/jest": "14.1.4",
-    "@nrwl/js": "14.1.4",
-    "@nrwl/linter": "14.1.4",
-    "@nrwl/workspace": "14.1.4",
+    "@angular-devkit/build-angular": "v14.0.0-rc.1 ",
+    "@angular-eslint/eslint-plugin": "~13.2.1",
+    "@angular-eslint/eslint-plugin-template": "~13.2.1",
+    "@angular-eslint/template-parser": "~13.2.1",
+    "@angular/cli": "v14.0.0-rc.1 ",
+    "@angular/compiler-cli": "v14.0.0-rc.1 ",
+    "@angular/language-service": "v14.0.0-rc.1 ",
+    "@nrwl/cli": "14.1.7",
+    "@nrwl/cypress": "14.1.7",
+    "@nrwl/eslint-plugin-nx": "14.1.7",
+    "@nrwl/jest": "14.1.7",
+    "@nrwl/js": "14.1.7",
+    "@nrwl/linter": "14.1.7",
+    "@nrwl/workspace": "14.1.7",
     "@types/crypto-js": "^4.1.1",
-    "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "~5.18.0",
-    "@typescript-eslint/parser": "~5.18.0",
-    "cypress": "^9.1.0",
-    "eslint": "~8.12.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "^2.25.4",
+    "@types/jest": "27.5.1",
+    "@types/node": "17.0.35",
+    "@typescript-eslint/eslint-plugin": "~5.25.0",
+    "@typescript-eslint/parser": "~5.25.0",
+    "cypress": "^9.6.1",
+    "eslint": "~8.16.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^7.0.4",
-    "jest": "27.5.1",
-    "jest-preset-angular": "11.1.1",
+    "husky": "^8.0.1",
+    "jest": "28.1.0",
+    "jest-preset-angular": "12.0.1",
     "js-beautify": "^1.14.3",
-    "lint-staged": "^12.3.3",
-    "ng-packagr": "^13.0.0",
-    "nx": "14.1.4",
-    "postcss": "^8.4.5",
-    "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-url": "^10.1.1",
-    "posthtml": "^0.16.5",
+    "lint-staged": "^12.4.1",
+    "ng-packagr": "^13.3.1",
+    "nx": "14.1.7",
+    "postcss": "^8.4.14",
+    "postcss-import": "^14.1.0",
+    "postcss-preset-env": "^7.6.0",
+    "postcss-url": "^10.1.3",
+    "posthtml": "^0.16.6",
     "posthtml-attrs-sorter": "^1.1.0",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
-    "ts-jest": "27.0.5",
-    "ts-node": "9.1.1",
-    "typescript": "~4.6.2"
+    "ts-jest": "28.0.2",
+    "ts-node": "10.7.0",
+    "typescript": "~4.6.4"
   }
 }
