--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,7 +42,7 @@
   // Others
   "typescript.preferences.quoteStyle": "single",
   "workbench.iconTheme": "material-icon-theme",
-  "cSpell.words": [""],
+  "cSpell.words": ["", "Tabler"],
   "tslint.alwaysShowRuleFailuresAsWarnings": false,
   "emeraldwalk.runonsave": {
     "commands": [
