--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@taiga-ui/icons": "^2.45.0",
     "@taiga-ui/kit": "^2.45.0",
     "@tinkoff/ng-polymorpheus": "^3.1.12",
+    "angular-tabler-icons": "^1.68.0",
     "colors": "^1.4.0",
     "crypto-js": "^4.1.1",
     "dompurify": "2.3.8",
