--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@microsoft/signalr": "^6.0.5",
     "@nrwl/angular": "14.1.7",
     "@tabler/icons": "^1.68.0",
+    "@taiga-ui/addon-editor": "^2.46.0",
     "@taiga-ui/cdk": "^2.45.0",
     "@taiga-ui/core": "^2.45.0",
     "@taiga-ui/icons": "^2.45.0",
