--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "v14.0.0-rc.1 ",
+    "@angular/cdk": "v14.0.0-rc.1 ",
     "@angular/common": "v14.0.0-rc.1 ",
     "@angular/compiler": "v14.0.0-rc.1 ",
     "@angular/core": "v14.0.0-rc.1 ",
@@ -23,6 +24,7 @@
     "@nrwl/angular": "14.1.7",
     "@tabler/icons": "^1.68.0",
     "@taiga-ui/addon-editor": "^2.46.0",
+    "@taiga-ui/addon-table": "^2.46.0",
     "@taiga-ui/cdk": "^2.45.0",
     "@taiga-ui/core": "^2.45.0",
     "@taiga-ui/icons": "^2.45.0",
