--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@angular/compiler": "v14.0.0-rc.1 ",
     "@angular/core": "v14.0.0-rc.1 ",
     "@angular/forms": "v14.0.0-rc.1 ",
-    "@angular/platform-browser": "v14.0.0-rc.1 ",
+    "@angular/platform-browser": "v14.0.0-rc.1",
     "@angular/platform-browser-dynamic": "v14.0.0-rc.1 ",
+    "@angular/pwa": "v14.0.0-rc.1",
     "@angular/router": "v14.0.0-rc.1 ",
+    "@angular/service-worker": "^13.3.11",
     "@microsoft/signalr": "^6.0.5",
     "@nrwl/angular": "14.1.7",
     "@tabler/icons": "^1.68.0",
