feat(portal): fix pwa

--- a/apps/mix-portal/project.json
+++ b/apps/mix-portal/project.json
@@ -20,14 +20,17 @@
             "glob": "**/*",
             "input": "node_modules/@taiga-ui/icons/src",
             "output": "assets/taiga-ui/icons"
-          }
+          },
+          "apps/portal/src/manifest.webmanifest"
         ],
         "styles": [
           "node_modules/@taiga-ui/core/styles/taiga-ui-global.less",
           "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
           "apps/mix-portal/src/styles.scss"
         ],
-        "scripts": []
+        "scripts": [],
+        "serviceWorker": true,
+        "ngswConfigPath": "apps/portal/ngsw-config.json"
       },
       "configurations": {
         "production": {
