--- a/package.json
+++ b/package.json
@@ -1,90 +1,90 @@
 {
-  "name": "mix-spa",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "nx",
-    "start": "nx serve",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
-    "build": "nx build",
-    "test": "nx test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "v14.0.0-rc.1 ",
-    "@angular/cdk": "v14.0.0-rc.1 ",
-    "@angular/common": "v14.0.0-rc.1 ",
-    "@angular/compiler": "v14.0.0-rc.1 ",
-    "@angular/core": "v14.0.0-rc.1 ",
-    "@angular/forms": "v14.0.0-rc.1 ",
-    "@angular/platform-browser": "v14.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "v14.0.0-rc.1 ",
-    "@angular/pwa": "v14.0.0-rc.1",
-    "@angular/router": "v14.0.0-rc.1 ",
-    "@angular/service-worker": "^13.3.11",
-    "@microsoft/signalr": "^6.0.5",
-    "@nrwl/angular": "14.1.7",
-    "@tabler/icons": "^1.68.0",
-    "@taiga-ui/addon-editor": "^2.46.0",
-    "@taiga-ui/addon-table": "^2.46.0",
-    "@taiga-ui/cdk": "^2.45.0",
-    "@taiga-ui/core": "^2.45.0",
-    "@taiga-ui/icons": "^2.45.0",
-    "@taiga-ui/kit": "^2.45.0",
-    "@tinkoff/ng-polymorpheus": "^3.1.12",
-    "angular-tabler-icons": "^1.68.0",
-    "colors": "^1.4.0",
-    "crypto-js": "^4.1.1",
-    "dompurify": "2.3.8",
-    "glob": "^8.0.3",
-    "rxjs": "~7.5.5",
-    "tslib": "^2.4.0",
-    "zone.js": "~0.11.5"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "v14.0.0-rc.1 ",
-    "@angular-eslint/eslint-plugin": "~13.2.1",
-    "@angular-eslint/eslint-plugin-template": "~13.2.1",
-    "@angular-eslint/template-parser": "~13.2.1",
-    "@angular/cli": "v14.0.0-rc.1 ",
-    "@angular/compiler-cli": "v14.0.0-rc.1 ",
-    "@angular/language-service": "v14.0.0-rc.1 ",
-    "@nrwl/cli": "14.1.7",
-    "@nrwl/cypress": "14.1.7",
-    "@nrwl/eslint-plugin-nx": "14.1.7",
-    "@nrwl/jest": "14.1.7",
-    "@nrwl/js": "14.1.7",
-    "@nrwl/linter": "14.1.7",
-    "@nrwl/workspace": "14.1.7",
-    "@types/crypto-js": "^4.1.1",
-    "@types/jest": "27.5.1",
-    "@types/node": "17.0.35",
-    "@typescript-eslint/eslint-plugin": "~5.25.0",
-    "@typescript-eslint/parser": "~5.25.0",
-    "cypress": "^9.6.1",
-    "eslint": "~8.16.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^8.0.1",
-    "jest": "28.1.0",
-    "jest-preset-angular": "12.0.1",
-    "js-beautify": "^1.14.3",
-    "lint-staged": "^12.4.1",
-    "ng-packagr": "^13.3.1",
-    "nx": "14.1.7",
-    "postcss": "^8.4.14",
-    "postcss-import": "^14.1.0",
-    "postcss-preset-env": "^7.6.0",
-    "postcss-url": "^10.1.3",
-    "posthtml": "^0.16.6",
-    "posthtml-attrs-sorter": "^1.1.0",
-    "prettier": "^2.6.2",
-    "pretty-quick": "^3.1.3",
-    "ts-jest": "28.0.2",
-    "ts-node": "10.7.0",
-    "typescript": "~4.6.4"
-  }
+    "name": "mix-spa",
+    "version": "0.0.0",
+    "license": "MIT",
+    "scripts": {
+        "ng": "nx",
+        "start": "nx serve --ssl",
+        "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
+        "build": "nx build",
+        "test": "nx test"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "v14.0.0-rc.1 ",
+        "@angular/cdk": "v14.0.0-rc.1 ",
+        "@angular/common": "v14.0.0-rc.1 ",
+        "@angular/compiler": "v14.0.0-rc.1 ",
+        "@angular/core": "v14.0.0-rc.1 ",
+        "@angular/forms": "v14.0.0-rc.1 ",
+        "@angular/platform-browser": "v14.0.0-rc.1",
+        "@angular/platform-browser-dynamic": "v14.0.0-rc.1 ",
+        "@angular/pwa": "v14.0.0-rc.1",
+        "@angular/router": "v14.0.0-rc.1 ",
+        "@angular/service-worker": "^13.3.11",
+        "@microsoft/signalr": "^6.0.5",
+        "@nrwl/angular": "14.1.7",
+        "@tabler/icons": "^1.68.0",
+        "@taiga-ui/addon-editor": "^2.46.0",
+        "@taiga-ui/addon-table": "^2.46.0",
+        "@taiga-ui/cdk": "^2.45.0",
+        "@taiga-ui/core": "^2.45.0",
+        "@taiga-ui/icons": "^2.45.0",
+        "@taiga-ui/kit": "^2.45.0",
+        "@tinkoff/ng-polymorpheus": "^3.1.12",
+        "angular-tabler-icons": "^1.68.0",
+        "colors": "^1.4.0",
+        "crypto-js": "^4.1.1",
+        "dompurify": "2.3.8",
+        "glob": "^8.0.3",
+        "rxjs": "~7.5.5",
+        "tslib": "^2.4.0",
+        "zone.js": "~0.11.5"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "v14.0.0-rc.1 ",
+        "@angular-eslint/eslint-plugin": "~13.2.1",
+        "@angular-eslint/eslint-plugin-template": "~13.2.1",
+        "@angular-eslint/template-parser": "~13.2.1",
+        "@angular/cli": "v14.0.0-rc.1 ",
+        "@angular/compiler-cli": "v14.0.0-rc.1 ",
+        "@angular/language-service": "v14.0.0-rc.1 ",
+        "@nrwl/cli": "14.1.7",
+        "@nrwl/cypress": "14.1.7",
+        "@nrwl/eslint-plugin-nx": "14.1.7",
+        "@nrwl/jest": "14.1.7",
+        "@nrwl/js": "14.1.7",
+        "@nrwl/linter": "14.1.7",
+        "@nrwl/workspace": "14.1.7",
+        "@types/crypto-js": "^4.1.1",
+        "@types/jest": "27.5.1",
+        "@types/node": "17.0.35",
+        "@typescript-eslint/eslint-plugin": "~5.25.0",
+        "@typescript-eslint/parser": "~5.25.0",
+        "cypress": "^9.6.1",
+        "eslint": "~8.16.0",
+        "eslint-config-prettier": "8.5.0",
+        "eslint-plugin-cypress": "^2.12.1",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "husky": "^8.0.1",
+        "jest": "28.1.0",
+        "jest-preset-angular": "12.0.1",
+        "js-beautify": "^1.14.3",
+        "lint-staged": "^12.4.1",
+        "ng-packagr": "^13.3.1",
+        "nx": "14.1.7",
+        "postcss": "^8.4.14",
+        "postcss-import": "^14.1.0",
+        "postcss-preset-env": "^7.6.0",
+        "postcss-url": "^10.1.3",
+        "posthtml": "^0.16.6",
+        "posthtml-attrs-sorter": "^1.1.0",
+        "prettier": "^2.6.2",
+        "pretty-quick": "^3.1.3",
+        "ts-jest": "28.0.2",
+        "ts-node": "10.7.0",
+        "typescript": "~4.6.4"
+    }
 }
