--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "glob": "^8.0.3",
     "rxjs": "~7.5.5",
     "tslib": "^2.4.0",
+    "yargs-parser": "^21.0.1",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
