--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "start": "nx serve --ssl",
+    "start": "nx serve",
+    "start:ssl": "nx run mix-portal:serve:ssl --ssl",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "build": "nx build",
     "test": "nx test"
