--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-  "printWidth": 140,
+  "printWidth": 80,
   "tabWidth": 2,
   "singleQuote": true,
   "trailingComma": "none",
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "singleAttributePerLine": true
 }
