--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "crypto-js": "^4.1.1",
     "dompurify": "2.3.8",
     "glob": "^8.0.3",
+    "ngx-monaco-editor": "^12.0.0",
     "panzoom": "^9.4.3",
     "rxjs": "~7.5.5",
     "tslib": "^2.4.0",
@@ -76,6 +77,7 @@
     "jest-preset-angular": "12.0.1",
     "js-beautify": "^1.14.3",
     "lint-staged": "^12.4.1",
+    "monaco-editor": "^0.33.0",
     "ng-packagr": "^13.3.1",
     "nx": "14.1.7",
     "postcss": "^8.4.14",
