--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "crypto-js": "^4.1.1",
     "dompurify": "2.3.8",
     "glob": "^8.0.3",
+    "ngx-joyride": "^2.5.0",
     "ngx-monaco-editor": "^12.0.0",
     "panzoom": "^9.4.3",
     "rxjs": "~7.5.5",
