feat(portal): refactor code, add create new theme sidebar

--- a/apps/mix-portal/project.json
+++ b/apps/mix-portal/project.json
@@ -1,7 +1,7 @@
 {
   "projectType": "application",
   "sourceRoot": "apps/mix-portal/src",
-  "prefix": "mix-spa",
+  "prefix": "mix",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
