--- a/libs/mix.share/project.json
+++ b/libs/mix.share/project.json
@@ -1,7 +1,7 @@
 {
   "projectType": "library",
   "sourceRoot": "libs/mix.share/src",
-  "prefix": "mix-spa",
+  "prefix": "mix",
   "targets": {
     "build": {
       "executor": "@nrwl/angular:ng-packagr-lite",
