feat(repo): add mix ui library

--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,7 @@
   "projects": {
     "mix-portal": "apps/mix-portal",
     "mix.lib": "libs/mix.lib",
-    "mix.share": "libs/mix.share"
+    "mix.share": "libs/mix.share",
+    "mix.ui": "libs/mix.ui"
   }
 }
