--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nrwl/angular": "14.1.7",
     "@tabler/icons": "^1.68.0",
     "@taiga-ui/addon-editor": "^2.46.0",
+    "@taiga-ui/addon-mobile": "^2.57.0",
     "@taiga-ui/addon-table": "^2.46.0",
     "@taiga-ui/cdk": "^2.45.0",
     "@taiga-ui/core": "^2.45.0",
