feat: update code to latest

--- a/apps/mix-cms/project.json
+++ b/apps/mix-cms/project.json
@@ -41,7 +41,8 @@
           "crypto-js",
           "rfdc",
           "jsoneditor",
-          "flat"
+          "flat",
+          "qrcode"
         ],
         "serviceWorker": true,
         "ngswConfigPath": "apps/mix-cms/ngsw-config.json"
