--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.0.1",
+    "@angular/animations": "16.1.8",
     "@angular/cdk": "^16.0.3",
-    "@angular/common": "16.0.1",
-    "@angular/compiler": "16.0.1",
-    "@angular/core": "16.0.1",
-    "@angular/forms": "16.0.1",
-    "@angular/platform-browser": "16.0.1",
-    "@angular/platform-browser-dynamic": "16.0.1",
-    "@angular/pwa": "^16.0.1",
-    "@angular/router": "16.0.1",
-    "@angular/service-worker": "16.0.1",
+    "@angular/common": "16.1.8",
+    "@angular/compiler": "16.1.8",
+    "@angular/core": "16.1.8",
+    "@angular/forms": "16.1.8",
+    "@angular/platform-browser": "16.1.8",
+    "@angular/platform-browser-dynamic": "16.1.8",
+    "@angular/pwa": "^16.1.8",
+    "@angular/router": "16.1.8",
+    "@angular/service-worker": "16.1.8",
     "@apollo/client": "^3.7.17",
     "@microsoft/signalr": "^7.0.5",
     "@ngneat/edit-in-place": "^1.6.1",
@@ -36,13 +36,14 @@
     "@nrwl/angular": "16.1.4",
     "@swimlane/ngx-charts": "^20.1.2",
     "@taiga-ui/addon-editor": "^3.24.0",
-    "@taiga-ui/addon-mobile": "3.36.1",
-    "@taiga-ui/addon-preview": "3.36.1",
-    "@taiga-ui/addon-table": "3.36.1",
-    "@taiga-ui/cdk": "3.36.1",
-    "@taiga-ui/core": "3.36.1",
-    "@taiga-ui/icons": "3.36.1",
-    "@taiga-ui/kit": "3.36.1",
+    "@taiga-ui/addon-mobile": "3.39.1",
+    "@taiga-ui/addon-preview": "3.39.1",
+    "@taiga-ui/addon-table": "3.39.1",
+    "@taiga-ui/cdk": "3.39.1",
+    "@taiga-ui/core": "3.39.1",
+    "@taiga-ui/icons": "3.39.1",
+    "@taiga-ui/kit": "3.39.1",
+    "@tinkoff/ng-dompurify": "^4.0.0",
     "@tinkoff/ng-polymorpheus": "4.1.0",
     "ang-jsoneditor": "^3.1.0",
     "angular-tabler-icons": "^2.13.0",
@@ -67,13 +68,13 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.0.1",
-    "@angular-eslint/eslint-plugin": "16.0.1",
-    "@angular-eslint/eslint-plugin-template": "16.0.1",
-    "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "16.0.1",
-    "@angular/compiler-cli": "16.0.1",
-    "@angular/language-service": "16.0.1",
+    "@angular-devkit/build-angular": "16.1.8",
+    "@angular-eslint/eslint-plugin": "16.1.0",
+    "@angular-eslint/eslint-plugin-template": "16.1.0",
+    "@angular-eslint/template-parser": "16.1.0",
+    "@angular/cli": "16.1.8",
+    "@angular/compiler-cli": "16.1.8",
+    "@angular/language-service": "16.1.8",
     "@nrwl/cli": "14.8.6",
     "@nrwl/cypress": "16.1.4",
     "@nrwl/eslint-plugin-nx": "16.1.4",
