feat: change way of register app

--- a/apps/mix-cms/project.json
+++ b/apps/mix-cms/project.json
@@ -42,7 +42,8 @@
           "rfdc",
           "jsoneditor",
           "flat",
-          "qrcode"
+          "qrcode",
+          "dompurify"
         ],
         "serviceWorker": true,
         "ngswConfigPath": "apps/mix-cms/ngsw-config.json"
