feat: change database select

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -40,6 +40,7 @@
       ],
       "@mixcore/ui/editor": ["libs/mix-ui/src/rich-text-editor/index.ts"],
       "@mixcore/ui/error": ["libs/mix-ui/src/error-alert/index.ts"],
+      "@mixcore/ui/filter": ["libs/mix-ui/src/dynamic-filter/index.ts"],
       "@mixcore/ui/icon-button": ["libs/mix-ui/src/icon-button/index.ts"],
       "@mixcore/ui/input": ["libs/mix-ui/src/input/index.ts"],
       "@mixcore/ui/input-number": ["libs/mix-ui/src/input-number/index.ts"],
@@ -52,8 +53,7 @@
       "@mixcore/ui/table": ["libs/mix-ui/src/data-table/index.ts"],
       "@mixcore/ui/textarea": ["libs/mix-ui/src/text-area/index.ts"],
       "@mixcore/ui/toggle": ["libs/mix-ui/src/toggle/index.ts"],
-      "@mixcore/ui/upload": ["libs/mix-ui/src/upload/index.ts"],
-      "@mixcore/ui/filter": ["libs/mix-ui/src/dynamic-filter/index.ts"]
+      "@mixcore/ui/upload": ["libs/mix-ui/src/upload/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
