--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "5.58.0",
     "@typescript-eslint/parser": "5.58.0",
+    "autoprefixer": "^10.4.15",
     "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -98,7 +99,9 @@
     "jest-environment-jsdom": "29.4.3",
     "jest-preset-angular": "13.1.1",
     "nx": "16.1.4",
+    "postcss": "^8.4.29",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.0.4"
