--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-architects/module-federation": "^16.0.4",
+    "@angular-architects/module-federation-tools": "^16.0.4",
     "@angular/animations": "16.1.8",
     "@angular/cdk": "^16.0.3",
     "@angular/common": "16.1.8",
     "@angular/compiler": "16.1.8",
     "@angular/core": "16.1.8",
+    "@angular/elements": "^16.2.9",
     "@angular/forms": "16.1.8",
     "@angular/platform-browser": "16.1.8",
     "@angular/platform-browser-dynamic": "16.1.8",
@@ -73,6 +76,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "16.1.8",
+    "@angular-devkit/core": "16.1.8",
+    "@angular-devkit/schematics": "16.1.8",
     "@angular-eslint/eslint-plugin": "16.1.0",
     "@angular-eslint/eslint-plugin-template": "16.1.0",
     "@angular-eslint/template-parser": "16.1.0",
@@ -86,12 +91,17 @@
     "@nrwl/linter": "16.1.4",
     "@nrwl/nx-cloud": "16.0.5",
     "@nrwl/workspace": "16.1.4",
+    "@nx/cypress": "16.1.4",
+    "@nx/jest": "16.1.4",
+    "@nx/js": "16.1.4",
+    "@nx/web": "16.1.4",
+    "@schematics/angular": "16.1.8",
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "29.4.4",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "5.58.0",
     "@typescript-eslint/parser": "5.58.0",
-    "cypress": "^10.7.0",
+    "cypress": "^12.11.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
