--- a/apps/mix-cms/project.json
+++ b/apps/mix-cms/project.json
@@ -6,7 +6,7 @@
   "prefix": "mix",
   "targets": {
     "build": {
-      "executor": "@nx/angular:webpack-browser",
+      "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/mix-cms",
@@ -61,8 +61,8 @@
             },
             {
               "type": "anyComponentStyle",
-              "maximumWarning": "3kb",
-              "maximumError": "4kb"
+              "maximumWarning": "7kb",
+              "maximumError": "7kb"
             }
           ],
           "fileReplacements": [
