--- a/apps/shell/tsconfig.app.json
+++ b/apps/shell/tsconfig.app.json
@@ -5,15 +5,14 @@
     "types": []
   },
   "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
+    "src/main.ts"
   ],
   "include": [
     "src/**/*.d.ts"
   ],
   "exclude": [
     "jest.config.ts",
-    "**/*.test.ts",
-    "**/*.spec.ts"
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts"
   ]
 }
