feat() clean app

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "start:kanban": "nx serve mix-kanban",
     "start:database": "nx serve mix-database",
     "start:shell": "nx serve shell",
-    "build:kanban": "nx build mix-kanban",
-    "build:database": "nx build mix-database",
-    "build:shell": "nx build shell",
+    "build-app:kanban": "nx build mix-kanban --baseHref=[[basePath]]",
+    "build-app:database": "nx build mix-database --baseHref=[[basePath]]",
+    "build-app:shell": "nx build shell",
     "build": "nx build",
     "build-stage": "nx build --configuration=stage",
     "build-live": "nx build --configuration=live",
